Fix z-index

--- a/resources/css/editorjs.css
+++ b/resources/css/editorjs.css
@@ -4,6 +4,12 @@
 
 /* editorjs */
 
+/* up position z-index toolbox, admin action bar z-index 30 */
+.ce-scroll-locked .codex-editor,
+.codex-editor.codex-editor--toolbox-opened {
+  z-index: 40;
+}
+
 .codex-editor a {
   @apply link;
 }
@@ -184,3 +190,4 @@
 .codeBoxHolder {
   overflow: initial;
 }
+
